# roster-scheduler

./: .gitignore  README.md  call_scheduler.py  oncall.proto  prototype.py  pyproject.toml  requirements.txt  scheduler.py
plugins/: rs_stub_roster.py  stub_calendar.py
plugins/roster/: rs_stub_roster.py
protos/: oncall_pb2.py
test_data/: calendars.yaml  generate_test_data.py  personA.calendar  scheduleA.yaml  teama.roster  teamb.roster
